--- a/index.html
+++ b/index.html
@@ -65,11 +65,39 @@
       max-width: 350px;
       margin: 10px 0;
       user-select: text;
+      position: relative;
     }
     .story-box[lang="en"] {
       direction: ltr;
       font-style: italic;
     }
+
+    /* نوار اسکرول آبی */
+    .story-box::-webkit-scrollbar {
+      width: 6px;
+    }
+    .story-box::-webkit-scrollbar-thumb {
+      background-color: #1a73e8cc;
+      border-radius: 10px;
+    }
+    .story-box::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    /* متن راهنما در پایین باکس */
+    .story-box::after {
+      content: "▼ متن قابل اسکرول است";
+      position: absolute;
+      bottom: 4px;
+      right: 10px;
+      font-size: 9px;
+      color: #1a73e8e0;
+      user-select: none;
+      pointer-events: none;
+      font-weight: bold;
+      font-family: Tahoma, sans-serif;
+    }
+
     .audio-player {
       background: rgba(31,31,31,0.8);
       border-radius: 15px;
