--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       color: white;
       text-align: center;
       direction: rtl;
+      padding-bottom: env(safe-area-inset-bottom, 20px);
     }
     video.background-video {
       position: fixed;
@@ -35,6 +36,7 @@
       justify-content: space-between;
       padding: 10px 0;
       box-sizing: border-box;
+      padding-bottom: calc(env(safe-area-inset-bottom, 20px) + 60px);
     }
     .portrait-box {
       background: rgba(31,31,31,0.8);
@@ -119,8 +121,10 @@
       gap: 12px;
       width: 90vw;
       max-width: 350px;
-      margin-bottom: 10px;
+      margin-bottom: env(safe-area-inset-bottom, 20px);
       flex-shrink: 0;
+      position: relative;
+      z-index: 10;
     }
     .link-box {
       background-color: #0088cc;
