--- a/index.html
+++ b/index.html
@@ -1,261 +1,50 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Arthur Morgan</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta charset="UTF-8">
+  <title>My Free ChatGPT</title>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-      background: black;
-      color: white;
-      text-align: center;
-      direction: rtl;
-      padding-bottom: env(safe-area-inset-bottom, 20px);
-    }
-    video.background-video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -1;
-      opacity: 0.07;
-      pointer-events: none;
-    }
-    .container {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 0;
-      box-sizing: border-box;
-      padding-bottom: calc(env(safe-area-inset-bottom, 20px) + 60px);
-    }
-    .portrait-box {
-      background: rgba(31,31,31,0.8);
-      width: 150px;
-      border-radius: 15px;
-      padding: 8px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.2);
-      flex-shrink: 0;
-    }
-    .portrait-box img {
-      width: 100%;
-      border-radius: 15px;
-      user-select: none;
-      pointer-events: none;
-    }
-    .story-box {
-      background-color: rgba(31,31,31,0.8);
-      padding: 10px 12px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(255,255,255,0.1);
-      font-size: 10px;
-      line-height: 1.3;
-      color: white;
-      text-align: justify;
-      overflow-y: auto;
-      flex-grow: 1;
-      width: 90vw;
-      max-width: 350px;
-      margin: 10px 0;
-      user-select: text;
-      position: relative;
-    }
-    .story-box[lang="en"] {
-      direction: ltr;
-      font-style: italic;
-    }
-    .story-box::-webkit-scrollbar {
-      width: 6px;
-    }
-    .story-box::-webkit-scrollbar-thumb {
-      background-color: #1a73e8cc;
-      border-radius: 10px;
-    }
-    .story-box::-webkit-scrollbar-track {
-      background: transparent;
-    }
-    .audio-player {
-      background: rgba(31,31,31,0.8);
-      border-radius: 15px;
-      padding: 8px;
-      box-shadow: 0 0 15px rgba(255,255,255,0.1);
-      color: white;
-      width: 90vw;
-      max-width: 350px;
-      flex-shrink: 0;
-    }
-    .audio-player button {
-      padding: 6px 14px;
-      border: none;
-      background-color: #1a73e8;
-      color: white;
-      font-size: 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    .progress-container {
-      margin-top: 8px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 6px;
-      color: #ccc;
-      font-size: 10px;
-    }
-    .progress-bar {
-      flex-grow: 1;
-    }
-    .links-row {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      width: 90vw;
-      max-width: 350px;
-      margin-bottom: env(safe-area-inset-bottom, 20px);
-      flex-shrink: 0;
-      position: relative;
-      z-index: 10;
-    }
-    .link-box {
-      background-color: #0088cc;
-      color: white;
-      flex: 1;
-      padding: 8px 6px;
-      border-radius: 12px;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 0 10px rgba(0, 136, 204, 0.7);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      cursor: pointer;
-      user-select: none;
-      transition: background-color 0.3s ease;
-      font-size: 12px;
-    }
-    .link-box:hover {
-      background-color: #006699;
-    }
-    .link-text {
-      margin-bottom: 4px;
-    }
-    .subtext {
-      font-size: 8px;
-      opacity: 0.8;
-      user-select: none;
-    }
+    body { font-family: sans-serif; background: #f2f2f2; text-align: center; padding: 20px; }
+    #chat { width: 90%; max-width: 400px; margin: auto; background: white; padding: 10px; border-radius: 10px; }
+    textarea { width: 100%; height: 50px; border-radius: 5px; padding: 5px; }
+    button { margin-top: 5px; padding: 10px; border: none; background: blue; color: white; border-radius: 5px; }
+    .message { text-align: left; margin: 5px 0; }
+    .user { color: blue; }
+    .bot { color: green; }
   </style>
 </head>
 <body>
 
-  <video class="background-video" autoplay muted loop playsinline>
-    <source src="https://uploadkon.ir/uploads/89e818_25VID-20250718-212050-031.mp4" type="video/mp4">
-  </video>
+<h2>ChatGPT رایگان من</h2>
+<div id="chat"></div>
 
-  <div class="container">
+<textarea id="input" placeholder="سوالت رو بنویس..."></textarea><br>
+<button onclick="sendMessage()">ارسال</button>
 
-    <div class="portrait-box">
-      <img src="https://uploadkon.ir/uploads/30bc18_253f0eae2b92ca589534c39a0b4b4104d2.jpg" alt="Arthur Morgan">
-    </div>
+<script>
+async function sendMessage() {
+  let chat = document.getElementById("chat");
+  let input = document.getElementById("input");
+  let question = input.value;
+  
+  chat.innerHTML += `<div class="message user"><b>شما:</b> ${question}</div>`;
+  input.value = "";
 
-    <div class="story-box" dir="ltr" lang="en">
-      <strong>Arthur Morgan's Story</strong>
-      <p>
-        Arthur Morgan... a man who searched for a piece of peace in the chaos of bullets, betrayal, and bloodshed; peace he never found.
-        <br><br>
-        Born into a world too cruel to embrace an orphaned child. His father was a thief, his mother died young, and he quickly learned that kindness has no place in a merciless world. Dutch took him in, taught him to survive... at the cost of slowly hardening his heart.
-        <br><br>
-        Arthur saw himself as a bad man. One who carried out the gang's dirty work without hesitation. But behind that cold, emotionless gaze lay a buried heart—a heart still beating for love, for compassion, for forgiveness.
-        <br><br>
-        Tuberculosis not only consumed his body, but awakened his soul. Every cough, every sleepless night was a jolt pulling him out of his darkness. Maybe there was still a chance for redemption.
-        <br><br>
-        And he tried... with pain, with blood, with his final breaths. In the end, Arthur died... but not like a thief. Like a man. A man whose voice still echoes in the hearts of millions.
-      </p>
-    </div>
+  chat.innerHTML += `<div class="message bot"><b>ربات:</b> در حال فکر کردن...</div>`;
 
-    <div class="story-box" dir="rtl" lang="fa">
-      <strong>زندگی آرتور مورگان</strong>
-      <p>
-        آرتور مورگان... مردی که در هیاهوی گلوله‌ها، خیانت‌ها و خون‌ریزی‌ها، به دنبال تکه‌ای از آرامش می‌گشت؛ آرامشی که هرگز نیافت.
-        <br><br>
-        او در دنیایی به دنیا آمد که بی‌رحم‌تر از آن بود که کودک یتیمی را در آغوش بگیرد. پدرش یک دزد بود، مادرش را زود از دست داد، و خیلی زود یاد گرفت که دنیا برای کسانی که مهربانند، رحم نمی‌کند. داچ او را به سرپرستی گرفت، به او یاد داد چطور زنده بماند... اما به بهای اینکه قلبش را آرام آرام سنگ کند.
-        <br><br>
-        آرتور خودش را یک مرد بد می‌دانست. کسی که کارهای کثیف باند را بی‌هیچ تردیدی انجام می‌داد. اما پشت آن نگاه سرد و بی‌احساس، قلبی دفن‌شده بود؛ قلبی که هنوز برای عشق، برای دوست‌داشتن، برای بخشیدن می‌تپید.
-        <br><br>
-        بیماری سل نه‌تنها بدنش را خورد، بلکه ذهنش را نیز باز کرد. هر سرفه، هر شب بیداری، تلنگری شد که او را از دنیای تاریک خود بیرون بکشد. شاید هنوز هم فرصتی برای رستگاری بود.
-        <br><br>
-        و او تلاش کرد... با درد، با خون، با نفس‌های آخرش. در نهایت، آرتور مُرد... اما نه مثل یک دزد. مثل یک مرد. مردی که در سکوت جان داد، اما صدایش در قلب میلیون‌ها نفر زنده ماند.
-      </p>
-    </div>
+  // درخواست بدون کلید به مدل پابلیک HuggingFace
+  let response = await fetch("https://api-inference.huggingface.co/models/google/flan-t5-base", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ inputs: question })
+  });
 
-    <div class="audio-player">
-      <audio id="audio" src="https://uploadkon.ir/uploads/eaf818_25may-i-stand-unshaken-banda-sonora-subtitulada-red-dead-redemption.mp3"></audio>
-      <button onclick="togglePlay()">▶️ Play / ⏸ Pause</button>
-      <div class="progress-container">
-        <span id="current">0:00</span>
-        <input type="range" id="progress" class="progress-bar" value="0" max="100" step="1" onchange="seekAudio()" />
-        <span id="duration">0:00</span>
-      </div>
-    </div>
+  let data = await response.json();
+  let answer = data[0]?.generated_text || "جواب پیدا نشد.";
 
-    <div class="links-row">
-      <a href="http://t.me/ejmok" target="_blank" class="link-box">
-        <div class="link-text">Telegram</div>
-      </a>
-      <a href="http://t.me/Jafok" target="_blank" class="link-box">
-        <div class="link-text">MTI</div>
-        <div class="subtext">Brother</div>
-      </a>
-      <a href="http://t.me/Berlin_opBot" target="_blank" class="link-box">
-        <div class="link-text">Bot</div>
-      </a>
-    </div>
+  chat.innerHTML = chat.innerHTML.replace(/در حال فکر کردن.../, answer);
+}
+</script>
 
-  </div>
-
-  <script>
-    const audio = document.getElementById('audio');
-    const progress = document.getElementById('progress');
-    const current = document.getElementById('current');
-    const duration = document.getElementById('duration');
-
-    function togglePlay() {
-      if (audio.paused) {
-        audio.play();
-      } else {
-        audio.pause();
-      }
-    }
-
-    audio.addEventListener('loadedmetadata', () => {
-      progress.max = Math.floor(audio.duration);
-      duration.textContent = formatTime(audio.duration);
-    });
-
-    audio.addEventListener('timeupdate', () => {
-      progress.value = Math.floor(audio.currentTime);
-      current.textContent = formatTime(audio.currentTime);
-    });
-
-    function seekAudio() {
-      audio.currentTime = progress.value;
-    }
-
-    function formatTime(sec) {
-      const minutes = Math.floor(sec / 60);
-      const seconds = Math.floor(sec % 60).toString().padStart(2, '0');
-      return `${minutes}:${seconds}`;
-    }
-  </script>
 </body>
 </html>
